--- a/index.html
+++ b/index.html
@@ -8,46 +8,48 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="shortcut icon" href="./media/images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
-    <header class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container">
-          <div class="logoyh1">
-              <a class="navbar-brand enlace" href="#">
-                  <img src="./media/images/logo.png" class="logo" alt="Logo de Patricio Gallo">
-                  <h1 class="fs-2 fw-bold">Patricio Gallo</h1>
-              </a>
-          </div>
-          <button class="navbar-toggler botonmenu" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-              aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                  <li class="nav-item">
-                      <a class="nav-link enlace" aria-current="page" href="./pages/about.html">Quiénes somos</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link  enlace" href="./pages/autogestion.html">Siniestros</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle  enlace" href="#" role="button" data-bs-toggle="dropdown"
-                          aria-expanded="false">
-                          Cotizá tu seguro
-                      </a>
-                      <ul class="dropdown-menu">
-                          <li><a class="dropdown-item  enlace" href="./pages/cotizadores/vehic.html">Vehículo</a></li>
-                          <li><a class="dropdown-item  enlace" href="./pages/cotizadores/vida.html">Vida y capitalización</a></li>
-                          <li><a class="dropdown-item  enlace" href="./pages/cotizador.html">Otro tipo de seguro</a></li>
-                      </ul>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link  enlace" href="./pages/contacto.html">Contacto</a>
-                  </li>
-              </ul>
-          </div>
+  <header class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container">
+      <div class="logoyh1">
+        <a class="navbar-brand enlace" href="#">
+          <img src="./media/images/logo.png" class="logo" alt="Logo de Patricio Gallo">
+          <h1 class="fs-2 fw-bold">Patricio Gallo</h1>
+        </a>
       </div>
+      <button class="navbar-toggler botonmenu" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link enlace" aria-current="page" href="./pages/about.html">Quiénes somos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  enlace" href="./pages/autogestion.html">Siniestros</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle  enlace" href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Cotizá tu seguro
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item  enlace" href="./pages/cotizadores/vehic.html">Vehículo</a></li>
+              <li><a class="dropdown-item  enlace" href="./pages/cotizadores/vida.html">Vida y capitalización</a></li>
+              <li><a class="dropdown-item  enlace" href="./pages/cotizador.html">Otro tipo de seguro</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  enlace" href="./pages/contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </header>
 
 
@@ -102,81 +104,55 @@
       </p>
       <div class="galeria">
         <img src="./media/images/asesor.jpg" alt="">
+        <article>
+          <h5>Asesoramiento Personalizado:</h5>
+          <p>Evalúa las necesidades específicas de cada cliente y ofrece asesoramiento
+            personalizado sobre el tipo y nivel de cobertura de seguros que mejor se adapta a sus circunstancias
+            individuales.</p>
+        </article>
         <img src="./media/images/cotizar.jpg" alt="">
+        <article>
+          <h5>Cotización y Comparación:</h5>
+          <p>Proporciona cotizaciones de diferentes compañías de seguros y compara las
+            opciones disponibles en términos de costos, coberturas y beneficios.</p>
+        </article>
         <img src="./media/images/venta.jpg" alt="">
+        <article>
+          <h5>Venta de Pólizas:</h5>
+          <p>Facilita la compra de pólizas de seguros, explicando los términos y condiciones, así como
+            los beneficios y limitaciones de cada póliza.</p>
+        </article>
         <img src="./media/images/gestion.jpg" alt="">
+        <article>
+          <h5>Gestión de Pólizas:</h5>
+          <p>Administra y renueva las pólizas existentes, asegurándose de que estén actualizadas y
+            proporcionando asistencia en caso de cambios en las circunstancias del asegurado.</p>
+        </article>
         <img src="./media/images/siniestro.jpg" alt="">
+        <article>
+          <h5>Manejo de Siniestros:</h5>
+          <p>Asiste a los clientes en el proceso de presentación de reclamaciones y trabaja con
+            las compañías de seguros para garantizar una resolución eficiente y justa en caso de siniestros.</p>
+        </article>
         <img src="./media/images/educacion.jpg" alt="">
+        <article>
+          <h5>Educación del Cliente:</h5>
+          <p>Educa a los clientes sobre los diferentes tipos de seguros, términos clave y cómo
+            funcionan las pólizas. También les proporciona información sobre cómo pueden proteger mejor sus activos y
+            su
+            bienestar financiero. </p>
+        </article>
         <img src="./media/images/seguimiento.jpg" alt="">
+        <article>
+          <h5>Seguimiento Continuo:</h5>
+          <p>Mantiene una relación a largo plazo con los clientes, realizando seguimientos
+            periódicos para garantizar que sus necesidades cambiantes estén cubiertas y ajustando las pólizas según
+            sea
+            necesario. </p>
+        </article>
       </div>
-      <!-- 
-      <div class="modificada">
-        <div>
-          <article>
-            <h5>Asesoramiento Personalizado:</h5>
-            <p>Evalúa las necesidades específicas de cada cliente y ofrece asesoramiento
-              personalizado sobre el tipo y nivel de cobertura de seguros que mejor se adapta a sus circunstancias
-              individuales.</p>
-          </article>
-          <img src="./media/images/asesor.jpg" alt="">
-        </div>
-        <div>
-          <img src="./media/images/cotizar.jpg" alt="">
-          <article>
-            <h5>Cotización y Comparación:</h5>
-            <p>Proporciona cotizaciones de diferentes compañías de seguros y compara las
-              opciones disponibles en términos de costos, coberturas y beneficios.</p>
-          </article>
-        </div>
-        <div>
-          <article>
-            <h5>Venta de Pólizas:</h5>
-            <p>Facilita la compra de pólizas de seguros, explicando los términos y condiciones, así como
-              los beneficios y limitaciones de cada póliza.</p>
-          </article>
-          <img src="./media/images/venta.jpg" alt="">
-        </div>
-        <div>
-          <img src="./media/images/gestion.jpg" alt="">
-          <article>
-            <h5>Gestión de Pólizas:</h5>
-            <p>Administra y renueva las pólizas existentes, asegurándose de que estén actualizadas y
-              proporcionando asistencia en caso de cambios en las circunstancias del asegurado.</p>
-          </article>
-        </div>
-        <div>
-          <article>
-            <h5>Manejo de Siniestros:</h5>
-            <p>Asiste a los clientes en el proceso de presentación de reclamaciones y trabaja con
-              las compañías de seguros para garantizar una resolución eficiente y justa en caso de siniestros.</p>
-          </article>
-          <img src="./media/images/siniestro.jpg" alt="">
-        </div>
-        <div>
-          <img src="./media/images/educacion.jpg" alt="">
-          <article>
-            <h5>Educación del Cliente:</h5>
-            <p>Educa a los clientes sobre los diferentes tipos de seguros, términos clave y cómo
-              funcionan las pólizas. También les proporciona información sobre cómo pueden proteger mejor sus activos y
-              su
-              bienestar financiero. </p>
-          </article>
-        </div>
-        <div>
-          <article>
-            <h5>Seguimiento Continuo:</h5>
-            <p>Mantiene una relación a largo plazo con los clientes, realizando seguimientos
-              periódicos para garantizar que sus necesidades cambiantes estén cubiertas y ajustando las pólizas según
-              sea
-              necesario. </p>
-          </article>
-
-          <img src="./media/images/seguimiento.jpg" alt="">
-        </div>
-      </div>
-       -->
     </section>
-<hr>
+    <hr>
     <section class="aprende">
       <h2>Aprendé cómo</h2>
       <h3>podés cuidar lo que más querés</h3>
@@ -242,7 +218,8 @@
             <a class="enlace" href="https://www.instagram.com/prgasesor" target="_blank">Instagram</a>
           </li>
           <li>
-            <a class="enlace" href="https://www.linkedin.com/in/patricio-roberto-gallo-58142720b/" target="_blank">Linkedin</a>
+            <a class="enlace" href="https://www.linkedin.com/in/patricio-roberto-gallo-58142720b/"
+              target="_blank">Linkedin</a>
           </li>
         </ul>
       </div>
@@ -254,9 +231,11 @@
         94338
       </div>
       <div>Servicio de Atención al asegurado</div>
-      <div>Departamento de Orientación y Asistencia al asegurado <a class="enlace" href="tel: 08006668400">0800-666-8400</a></div>
+      <div>Departamento de Orientación y Asistencia al asegurado <a class="enlace"
+          href="tel: 08006668400">0800-666-8400</a></div>
       <div>
-        <a class="enlace" href="https://www.argentina.gob.ar/superintendencia-de-seguros" target="_blank">www.argentina.gob.ar/ssn</a>
+        <a class="enlace" href="https://www.argentina.gob.ar/superintendencia-de-seguros"
+          target="_blank">www.argentina.gob.ar/ssn</a>
       </div>
       <div>
         <img src="./media/images/logo-ssn.png" alt="logo ssn" />
@@ -271,8 +250,13 @@
       <span>Powered by PG</span>
     </section>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
