--- a/index.html
+++ b/index.html
@@ -103,53 +103,75 @@
         seguridad y éxito financiero.
       </p>
       <div class="galeria">
-        <img src="./media/images/asesor.jpg" alt="">
-        <article>
-          <h5>Asesoramiento Personalizado:</h5>
-          <p>Evalúa las necesidades específicas de cada cliente y ofrece asesoramiento
-            personalizado sobre el tipo y nivel de cobertura de seguros que mejor se adapta a sus circunstancias
-            individuales.</p>
-        </article>
-        <img src="./media/images/cotizar.jpg" alt="">
-        <article>
-          <h5>Cotización y Comparación:</h5>
-          <p>Proporciona cotizaciones de diferentes compañías de seguros y compara las
-            opciones disponibles en términos de costos, coberturas y beneficios.</p>
-        </article>
-        <img src="./media/images/venta.jpg" alt="">
-        <article>
-          <h5>Venta de Pólizas:</h5>
-          <p>Facilita la compra de pólizas de seguros, explicando los términos y condiciones, así como
-            los beneficios y limitaciones de cada póliza.</p>
-        </article>
-        <img src="./media/images/gestion.jpg" alt="">
-        <article>
-          <h5>Gestión de Pólizas:</h5>
-          <p>Administra y renueva las pólizas existentes, asegurándose de que estén actualizadas y
-            proporcionando asistencia en caso de cambios en las circunstancias del asegurado.</p>
-        </article>
-        <img src="./media/images/siniestro.jpg" alt="">
-        <article>
-          <h5>Manejo de Siniestros:</h5>
-          <p>Asiste a los clientes en el proceso de presentación de reclamaciones y trabaja con
-            las compañías de seguros para garantizar una resolución eficiente y justa en caso de siniestros.</p>
-        </article>
-        <img src="./media/images/educacion.jpg" alt="">
-        <article>
-          <h5>Educación del Cliente:</h5>
-          <p>Educa a los clientes sobre los diferentes tipos de seguros, términos clave y cómo
-            funcionan las pólizas. También les proporciona información sobre cómo pueden proteger mejor sus activos y
-            su
-            bienestar financiero. </p>
-        </article>
-        <img src="./media/images/seguimiento.jpg" alt="">
-        <article>
-          <h5>Seguimiento Continuo:</h5>
-          <p>Mantiene una relación a largo plazo con los clientes, realizando seguimientos
-            periódicos para garantizar que sus necesidades cambiantes estén cubiertas y ajustando las pólizas según
-            sea
-            necesario. </p>
-        </article>
+        <div>
+          <img src="./media/images/asesor.jpg" alt="">
+          <article>
+            <h5>Asesoramiento Personalizado:</h5>
+            <p>Evalúa las necesidades específicas de cada cliente y ofrece asesoramiento
+              personalizado sobre el tipo y nivel de cobertura de seguros que mejor se adapta a sus circunstancias
+              individuales.
+            </p>
+          </article>
+        </div>
+
+        <div>
+          <img src="./media/images/cotizar.jpg" alt="">
+          <article>
+            <h5>Cotización y Comparación:</h5>
+            <p>Proporciona cotizaciones de diferentes compañías de seguros y compara las opciones disponibles en
+              términos
+              de costos, coberturas y beneficios.
+            </p>
+          </article>
+        </div>
+
+        <div>
+          <img src="./media/images/venta.jpg" alt="">
+          <article>
+            <h5>Venta de Pólizas:</h5>
+            <p>Facilita la compra de pólizas de seguros, explicando los términos y condiciones, así como
+              los beneficios y limitaciones de cada póliza.</p>
+          </article>
+        </div>
+        <div>
+          <img src="./media/images/gestion.jpg" alt="">
+          <article>
+            <h5>Gestión de Pólizas:</h5>
+            <p>Administra y renueva las pólizas existentes, asegurándose de que estén actualizadas y
+              proporcionando asistencia en caso de cambios en las circunstancias del asegurado.</p>
+          </article>
+        </div>
+        <div>
+          <img src="./media/images/siniestro.jpg" alt="">
+          <article>
+            <h5>Manejo de Siniestros:</h5>
+            <p>Asiste a los clientes en el proceso de presentación de reclamaciones y trabaja con
+              las compañías de seguros para garantizar una resolución eficiente y justa en caso de siniestros.</p>
+          </article>
+        </div>
+        <div>
+          <img src="./media/images/educacion.jpg" alt="">
+          <article>
+            <h5>Educación del Cliente:</h5>
+            <p>Educa a los clientes sobre los diferentes tipos de seguros, términos clave y cómo
+              funcionan las pólizas. También les proporciona información sobre cómo pueden proteger mejor sus
+              activos
+              y
+              su
+              bienestar financiero. </p>
+          </article>
+        </div>
+        <div>
+          <img src="./media/images/seguimiento.jpg" alt="">
+          <article>
+            <h5>Seguimiento Continuo:</h5>
+            <p>Mantiene una relación a largo plazo con los clientes, realizando seguimientos
+              periódicos para garantizar que sus necesidades cambiantes estén cubiertas y ajustando las pólizas
+              según
+              sea
+              necesario. </p>
+          </article>
+        </div>
       </div>
     </section>
     <hr>
