--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home - Patricio Gallo</title>
+  <title>Patricio Gallo - Productor de Seguros</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="shortcut icon" href="./media/images/favicon.png" type="image/x-icon">
+  <meta name="description"
+    content="Protege tu vida y patrimonio con asesoramiento experto en seguros. Agenda tu consulta virtual gratuita ahora para soluciones personalizadas y tranquilidad duradera.">
 </head>
 
 <body>
@@ -179,7 +181,7 @@
       <h3>podés cuidar lo que más querés</h3>
       <div class="grilla">
         <div>
-          <img src="./media/images/seguro-para-auto.jpg" alt="Seguro de auto" />
+          <img class="scale-up-horizontal-center" src="./media/images/seguro-para-auto.jpg" alt="Seguro de auto" />
           <h5>Automotores</h5>
         </div>
         <div>
