--- a/pages/cotizadores/accpers.html
+++ b/pages/cotizadores/accpers.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cotizador</title>
+    <title>Cotizador de Seguros de Accidentes Personales - Patricio Gallo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/styles.css">
     <link rel="shortcut icon" href="../../media/images/favicon.png" type="image/x-icon">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-
+    <meta name="description" content="Cotiza y compara seguros de accidentes personales. Protege tu bienestar y el de tus seres queridos, así como a tus empleados en situaciones de empleo informal. Asegura su seguridad con nuestra herramienta de cotización en línea.">
 </head>
 
 <body>
