--- a/pages/cotizadores/vida.html
+++ b/pages/cotizadores/vida.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cotizador</title>
+    <title>Cotizador de Seguros de Vida - Patricio Gallo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/styles.css">
     <link rel="shortcut icon" href="../../media/images/favicon.png" type="image/x-icon">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="description" content="Cotiza y protege tu futuro con nuestro cotizador de seguros de vida. Encuentra la mejor cobertura para ti y tus seres queridos. Asesoramiento personalizado y opciones flexibles para garantizar tranquilidad." />
 
 
 </head>
