--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
       <div class="logoyh1">
-        <a class="navbar-brand enlace" href="#">
+        <a class="navbar-brand enlace" href="">
           <img src="./media/images/logo.png" class="logo" alt="Logo de Patricio Gallo">
           <h1 class="fs-2 fw-bold">Patricio Gallo</h1>
         </a>
