--- a/pages/cotizadores/vehic.html
+++ b/pages/cotizadores/vehic.html
@@ -58,7 +58,7 @@
             <div class="caja-formulario">
                 <h4>Completá...</h4>
                 <h5>Datos de tu vehículo...</h5>
-                <form action="">
+                <form id="datosVehiculoForm" action="">
                     <fieldset class="formulario">
 
                         <div class="mb-3">
@@ -77,7 +77,7 @@
                 </form>
 
                 <h5>Sobre vos...</h5>
-                <form action="">
+                <form id="datosPersonalesForm" action="">
                     <fieldset class="formulario">
 
                         <div class="mb-3">
@@ -120,7 +120,7 @@
                     </fieldset>
                 </form>
                 <div class="enviar">
-                    <button type="submit" class="boton botongral">Solicitar cotización</button>
+                    <button type="submit" class="boton botongral" onclick="solicitarCotizacion()">Solicitar cotización</button>
                 </div>
                 <p>Tené en cuenta que no recibirás una cotización automática, sino que serás contactado por un
                     especialista para obtener un asesoramiento preciso.
@@ -160,6 +160,7 @@
             <span>Powered by PG</span>
         </section>
     </footer>
+    <script src="../../js/cotizador.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
